update from locale3

--- a/app.html
+++ b/app.html
@@ -4,6 +4,6 @@
 	<title>My App</title>
 </head>
 <body>
-	this my app! and this is my first app
+	this my app! and this is my first app1234
 </body>
 </html>
